fix varios errores y estado final antes de refactorizar htmls